--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -13,9 +13,12 @@
 
   <!-- include source files here... -->
   <script src="src/Player.js"></script>
+  <script src="src/Plane.js"></script>
 
   <!-- include spec files here... -->
   <script src="spec/SpecHelper.js"></script>
+  <script src="spec/FeatureSpec.js"></script>
+  <script src="spec/PlaneSpec.js"></script>
 
 </head>
 
