--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -12,13 +12,15 @@
   <script src="lib/jasmine-3.0.0/boot.js"></script>
 
   <!-- include source files here... -->
-  <script src="src/Player.js"></script>
+  <script src="src/Airport.js"></script>
   <script src="src/Plane.js"></script>
 
   <!-- include spec files here... -->
   <script src="spec/SpecHelper.js"></script>
   <script src="spec/FeatureSpec.js"></script>
   <script src="spec/PlaneSpec.js"></script>
+  <script src="spec/AirportSpec.js"></script>
+
 
 </head>
 
